# votodroid-server

./: .gitignore  Cargo.toml  README.md
migrations/2022-12-06-050742_create_users/: up.sql
migrations/2022-12-09-020021_create_questions/: up.sql
migrations/2022-12-09-021313_create_votes/: down.sql  up.sql
src/: context.rs  database.rs  graphql.rs  lib.rs  main.rs  models.rs  schema.rs  services.rs
src/graphql/: question_resolver.rs  user_resolver.rs  vote_resolver.rs
src/models/: field_error.rs  question.rs  user.rs  vote.rs
src/services/: question.rs  user.rs  vote.rs
votodroid_server_derive/: Cargo.toml
votodroid_server_derive/src/: lib.rs
