[package]
name = "votodroid-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
env_logger = "0.10.0"
juniper = "0.15.10"
juniper_actix = "0.4.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
chrono = "0.4.23"
